--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@hapi/joi": "^16.1.7",
     "@nestjs/common": "^6.8.3",
     "@nestjs/core": "^6.8.3",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.8.3",
     "@nestjs/platform-socket.io": "^6.8.3",
+    "@nestjs/swagger": "^3.1.0",
     "@nestjs/websockets": "^6.8.3",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
     "lowdb": "^1.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
@@ -32,11 +37,13 @@
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.1",
     "@types/hapi__joi": "^16.0.1",
     "@types/jest": "^24.0.18",
     "@types/lowdb": "^1.0.9",
     "@types/node": "^12.7.5",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "concurrently": "^5.0.0",
     "jest": "^24.9.0",
