--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@nestjs/platform-socket.io": "^6.8.3",
         "@nestjs/swagger": "^3.1.0",
         "@nestjs/websockets": "^6.8.3",
+        "@types/bcrypt": "^3.0.0",
+        "bcrypt": "^3.0.6",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.10.2",
