--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "scripts": {
         "server:app:start:dev": "nodemon --config ./src/server/app/nodemon.json",
+        "server:stream:start:dev": "nodemon --config ./src/server/stream/nodemon.json",
         "mongo:start": "mongod --dbpath=C:/Users/Gege/Temp/WebPricer",
         "server:app:build": "tsc -p ./src/server/app/tsconfig.build.json",
         "server:app:start": "ts-node -r tsconfig-paths/register ./src/server/app/main.ts",
@@ -21,13 +22,14 @@
         "@nestjs/passport": "^6.1.0",
         "@nestjs/platform-express": "^6.8.3",
         "@nestjs/platform-socket.io": "^6.8.3",
+        "@nestjs/platform-ws": "^6.9.0",
         "@nestjs/swagger": "^3.1.0",
         "@nestjs/websockets": "^6.8.3",
-        "@types/bcrypt": "^3.0.0",
         "bcrypt": "^3.0.6",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.10.2",
+        "helmet": "^3.21.2",
         "lowdb": "^1.0.0",
         "mongoose": "^5.7.7",
         "nestjs-easyconfig": "^1.5.1",
@@ -42,12 +44,14 @@
         "uuid": "^3.3.3"
     },
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@nestjs/cli": "^6.9.0",
         "@nestjs/schematics": "^6.7.0",
         "@nestjs/testing": "^6.7.1",
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^16.0.1",
+        "@types/helmet": "0.0.45",
         "@types/jest": "^24.0.18",
         "@types/lowdb": "^1.0.9",
         "@types/mongoose": "^5.5.28",
