--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "dummy",
-    "version": "0.0.1",
+    "name": "web-pricer",
+    "version": "0.1.0",
     "description": "",
-    "author": "",
+    "author": "valasg@mail.com",
     "license": "MIT",
     "scripts": {
         "server:app:start:dev": "nodemon --config ./src/server/app/nodemon.json",
@@ -11,7 +11,9 @@
         "server:app:build": "tsc -p ./src/server/app/tsconfig.build.json",
         "server:app:start": "ts-node -r tsconfig-paths/register ./src/server/app/main.ts",
         "server:app:start:debug": "nodemon --config ./src/server/app/nodemon-debug.json",
-        "server:app:start:prod": "node dist/server/app/main.js"
+        "server:app:start:prod": "node dist/server/app/main.js",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "dependencies": {
         "@hapi/joi": "^16.1.7",
@@ -29,6 +31,8 @@
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.10.2",
+        "compression": "^1.7.4",
+        "express-rate-limit": "^5.0.0",
         "helmet": "^3.21.2",
         "lowdb": "^1.0.0",
         "mongoose": "^5.7.7",
@@ -44,15 +48,15 @@
         "uuid": "^3.3.3"
     },
     "devDependencies": {
-        "@types/bcrypt": "^3.0.0",
         "@nestjs/cli": "^6.9.0",
         "@nestjs/schematics": "^6.7.0",
-        "@nestjs/testing": "^6.7.1",
+        "@nestjs/testing": "^6.10.1",
+        "@types/bcrypt": "^3.0.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^16.0.1",
         "@types/helmet": "0.0.45",
-        "@types/jest": "^24.0.18",
+        "@types/jest": "^24.0.23",
         "@types/lowdb": "^1.0.9",
         "@types/mongoose": "^5.5.28",
         "@types/node": "^12.7.5",
@@ -63,7 +67,7 @@
         "nodemon": "^1.19.3",
         "prettier": "^1.18.2",
         "supertest": "^4.0.2",
-        "ts-jest": "^24.1.0",
+        "ts-jest": "^24.2.0",
         "ts-loader": "^6.1.1",
         "ts-node": "^8.4.1",
         "tsconfig-paths": "^3.9.0",
