--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@nestjs/platform-ws": "^6.9.0",
         "@nestjs/swagger": "^3.1.0",
         "@nestjs/websockets": "^6.8.3",
+        "@types/seedrandom": "^2.4.28",
         "bcrypt": "^3.0.6",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
@@ -40,6 +41,7 @@
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
+        "random": "^2.1.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.0",
         "rxjs": "^6.5.3",
@@ -61,6 +63,7 @@
         "@types/mongoose": "^5.5.28",
         "@types/node": "^12.7.5",
         "@types/passport-local": "^1.0.33",
+        "@types/random": "^2.1.0",
         "@types/supertest": "^2.0.8",
         "concurrently": "^5.0.0",
         "jest": "^24.9.0",
